
Revision 53 / 2005-03-14 / Benjamin Reitzammer

* added entriesSize() method to Output.class
* API returns status code 204 when entry list is empty 
* styled JS interface a bit different
* added delete capabilities to JS interface
* added User-Agent string when getting URLs with UrlFetcher


Revision 50 / 2005-02-25 / Benjamin Reitzammer

* fixed a bug in org.roosster.input.UrlFetcher that caused wrong 
  ContentTypeProcessor to be used, when ContentType was specified with Encoding
* removed JDOM dependency in EntryGenerator (ROME still needs JDOM)
* removed "app" Servlet from web.xml; this means the application (when run as 
  a web application is only available through the API)
* Implemented a rudimentary HTML Parser to extract text only from HTML pages, and
  use that as searchable content in index (uses TagSoup); is also used when 
  fetching feeds. --> added raw field to Lucene Document to still store complete
  URL's content
* added lastedit field to Entry and Document, gets updated automatically
* changed XML format, see doc/entry.xml for example of new structure
* API now allows to select output mode (specify 'output.mode' request parameter)
* standardized exception messages (for easy parsing and meaningful error Messages
  in JS Client)
* added number of entries in index to output in web interface
* adding entries in web interface handles DuplicateEntriesException gracefully
* added output-message facility to web interface. Error get printed nicely now.
* added "quickjump" facility to web interface. for quickly jumping into specific
  actions in the web interface, by specifying certain URL parameters 
* improved HTML parser to parse title out of page, and set Entry title accordingly.
* implemented frameset that shows raw cached contents of page (fixed output mode
  bug for that, and changed output/outputmode handling a little)
* fixed content type handling error
* changed default boolean search operator to AND