@@ -1,4 +1,4 @@
-roosster.app.version=0.2pre2
+roosster.app.version=0.2pre3
 
 default.input.encoding=ISO-8859-1
 default.output.encoding=UTF-8
@@ -11,6 +11,7 @@ command.entry.class=org.roosster.commands.GetEntryCommand
 command.listall.class=org.roosster.commands.ListAllCommand
 command.del.class=org.roosster.commands.DeleteEntryCommand
 command.putentries.class=org.roosster.commands.PutEntriesCommand
+command.syncdelicious.class=org.roosster.commands.SyncDeliciousCommand
 
 # always space separated
 plugins=store fetcher
